[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/art/tileset/tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Scene/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/audio One.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/art/background/background sky.png" type="Texture" id=4]
[ext_resource path="res://Scene/Coin.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/art/TreasureBox/treasure.png" type="Texture" id=6]
[ext_resource path="res://Scene/crab.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/art/coin/CoinHUD.png" type="Texture" id=8]
[ext_resource path="res://assets/theme/fonts/kenney_mini_square.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=10]
[ext_resource path="res://assets/art/heart/hud_heartFull.png" type="Texture" id=11]
[ext_resource path="res://assets/art/heart/hud_heartEmpty.png" type="Texture" id=12]
[ext_resource path="res://Scene/Checkpoint.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scripts/SceneMain.gd" type="Script" id=14]
[ext_resource path="res://Skeleton/Skeleton.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4625.5, 27.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19, 19.5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.207843 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 9 )

[node name="Node2D" type="Node2D"]
position = Vector2( 1, 1 )
script = ExtResource( 14 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 245.562, -207.188 )
scale = Vector2( 0.99077, 1.46983 )
texture = ExtResource( 4 )

[node name="BackgroundSky2" type="Sprite" parent="Background"]
position = Vector2( 1338.29, -2.42342 )
scale = Vector2( 0.99299, 1.01959 )
texture = ExtResource( 4 )

[node name="BackgroundSky3" type="Sprite" parent="Background"]
position = Vector2( 2604.48, -3.95419 )
scale = Vector2( 1.33547, 1.01349 )
texture = ExtResource( 4 )

[node name="BackgroundSky4" type="Sprite" parent="Background"]
position = Vector2( 4079.85, -3.95419 )
scale = Vector2( 1.27513, 1.01349 )
texture = ExtResource( 4 )

[node name="BackgroundSky5" type="Sprite" parent="Background"]
position = Vector2( 5813.09, -8.71666 )
scale = Vector2( 1.25881, 1.03226 )
texture = ExtResource( 4 )

[node name="BackgroundSky6" type="Sprite" parent="Background"]
position = Vector2( 7539.02, -8.71666 )
scale = Vector2( 1.24487, 1.01822 )
texture = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -126, -388 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
collision_mask = 17
format = 1
tile_data = PoolIntArray( 131290, 0, 0, 131291, 0, 0, 196826, 7, 0, 196827, 4, 0, 262261, 0, 0, 262262, 0, 0, 262263, 0, 0, 262264, 0, 0, 262346, 0, 0, 262347, 0, 0, 262348, 1, 0, 262349, 0, 0, 262350, 0, 0, 262351, 0, 0, 262352, 0, 0, 262353, 0, 0, 262354, 0, 0, 262355, 0, 0, 262356, 0, 0, 262357, 0, 0, 262358, 0, 0, 262362, 4, 0, 262363, 7, 0, 327745, 0, 0, 327746, 0, 0, 327751, 0, 0, 327752, 0, 0, 327753, 0, 0, 327797, 8, 0, 327798, 10, 0, 327799, 8, 0, 327800, 9, 0, 327878, 1, 0, 327882, 7, 0, 327883, 4, 0, 327884, 7, 0, 327885, 4, 0, 327886, 7, 0, 327887, 4, 0, 327888, 7, 0, 327889, 4, 0, 327890, 7, 0, 327891, 4, 0, 327892, 7, 0, 327893, 4, 0, 327894, 7, 0, 458750, 5, 0, 458751, 0, 0, 393216, 0, 0, 393217, 1, 0, 393281, 10, 0, 393282, 8, 0, 393287, 8, 0, 393288, 10, 0, 393289, 8, 0, 393326, 0, 0, 393327, 0, 0, 393328, 0, 0, 393329, 0, 0, 393357, 0, 0, 393358, 0, 0, 393359, 0, 0, 393413, 1, 0, 393414, 7, 0, 524286, 4, 0, 524287, 7, 0, 458752, 4, 0, 458753, 7, 0, 458785, 0, 0, 458786, 0, 0, 458787, 6, 0, 458809, 0, 0, 458810, 0, 0, 458811, 0, 0, 458812, 1, 0, 458813, 6, 0, 458844, 0, 0, 458845, 0, 0, 458846, 0, 0, 458862, 10, 0, 458863, 8, 0, 458864, 10, 0, 458865, 8, 0, 458893, 8, 0, 458894, 10, 0, 458895, 8, 0, 458949, 8, 0, 458950, 10, 0, 589822, 7, 0, 589823, 4, 0, 524288, 7, 0, 524289, 4, 0, 524321, 10, 0, 524322, 8, 0, 524323, 9, 0, 524345, 10, 0, 524346, 8, 0, 524347, 10, 0, 524348, 8, 0, 524349, 9, 0, 524368, 0, 0, 524369, 0, 0, 524380, 10, 0, 524381, 8, 0, 524382, 10, 0, 524388, 0, 0, 524389, 0, 0, 524390, 0, 0, 524391, 0, 0, 524392, 0, 0, 524393, 0, 0, 524394, 0, 0, 524423, 0, 0, 524424, 0, 0, 524425, 0, 0, 524453, 0, 0, 524454, 0, 0, 524463, 0, 0, 524464, 0, 0, 524465, 0, 0, 524466, 0, 0, 524480, 0, 0, 524481, 0, 0, 655358, 4, 0, 655359, 7, 0, 589824, 4, 0, 589825, 7, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589855, 0, 0, 589856, 0, 0, 589876, 0, 0, 589877, 0, 0, 589904, 10, 0, 589905, 8, 0, 589910, 0, 0, 589911, 0, 0, 589912, 0, 0, 589924, 10, 0, 589925, 8, 0, 589926, 10, 0, 589927, 8, 0, 589928, 10, 0, 589929, 8, 0, 589930, 10, 0, 589959, 7, 0, 589960, 4, 0, 589961, 7, 0, 589989, 8, 0, 589990, 10, 0, 589999, 10, 0, 590000, 8, 0, 590001, 10, 0, 590002, 8, 0, 590016, 4, 0, 590017, 7, 0, 720894, 4, 0, 720895, 7, 0, 655360, 4, 0, 655361, 7, 0, 655374, 0, 0, 655375, 0, 0, 655379, 7, 0, 655380, 4, 0, 655381, 7, 0, 655387, 0, 0, 655388, 0, 0, 655391, 8, 0, 655392, 9, 0, 655398, 0, 0, 655399, 0, 0, 655407, 0, 0, 655408, 0, 0, 655412, 4, 0, 655413, 7, 0, 655429, 0, 0, 655430, 0, 0, 655436, 1, 0, 655437, 1, 0, 655445, 0, 0, 655446, 7, 0, 655447, 4, 0, 655448, 7, 0, 655469, 0, 0, 655470, 0, 0, 655482, 0, 0, 655483, 0, 0, 655488, 0, 0, 655489, 0, 0, 655490, 0, 0, 655495, 4, 0, 655496, 7, 0, 655497, 4, 0, 655514, 0, 0, 655518, 0, 0, 655519, 0, 0, 655530, 0, 0, 655531, 0, 0, 655547, 0, 0, 655548, 0, 0, 655552, 10, 0, 655553, 8, 0, 786430, 7, 0, 786431, 4, 0, 720896, 7, 0, 720897, 4, 0, 720905, 0, 0, 720906, 0, 0, 720910, 2, 0, 720911, 4, 0, 720915, 4, 0, 720916, 7, 0, 720917, 4, 0, 720923, 7, 0, 720924, 4, 0, 720934, 7, 0, 720935, 4, 0, 720943, 7, 0, 720944, 3, 0, 720948, 4, 0, 720949, 7, 0, 720965, 4, 0, 720966, 7, 0, 720972, 4, 0, 720973, 7, 0, 720981, 7, 0, 720982, 4, 0, 720983, 7, 0, 720984, 4, 0, 721005, 4, 0, 721006, 7, 0, 721018, 7, 0, 721019, 4, 0, 721024, 7, 0, 721025, 4, 0, 721026, 7, 0, 721031, 7, 0, 721032, 4, 0, 721033, 7, 0, 721050, 4, 0, 721054, 7, 0, 721055, 4, 0, 721066, 7, 0, 721067, 4, 0, 721083, 7, 0, 721084, 4, 0, 851960, 0, 0, 851961, 0, 0, 851962, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 4, 0, 851967, 7, 0, 786432, 4, 0, 786433, 7, 0, 786434, 5, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 4, 0, 786442, 2, 0, 786446, 2, 0, 786447, 4, 0, 786448, 5, 0, 786449, 1, 0, 786450, 0, 0, 786451, 7, 0, 786452, 4, 0, 786453, 7, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 4, 0, 786460, 7, 0, 786470, 4, 0, 786471, 7, 0, 786472, 0, 0, 786473, 0, 0, 786474, 0, 0, 786475, 0, 0, 786476, 0, 0, 786477, 0, 0, 786478, 0, 0, 786479, 7, 0, 786480, 3, 0, 786481, 0, 0, 786482, 0, 0, 786483, 0, 0, 786484, 7, 0, 786485, 4, 0, 786499, 0, 0, 786500, 0, 0, 786501, 7, 0, 786502, 4, 0, 786503, 0, 0, 786504, 0, 0, 786505, 0, 0, 786506, 0, 0, 786507, 0, 0, 786508, 4, 0, 786509, 7, 0, 786514, 0, 0, 786515, 0, 0, 786516, 0, 0, 786517, 4, 0, 786518, 7, 0, 786519, 4, 0, 786520, 7, 0, 786537, 0, 0, 786538, 0, 0, 786539, 0, 0, 786540, 0, 0, 786541, 7, 0, 786542, 4, 0, 786554, 4, 0, 786555, 7, 0, 786556, 0, 0, 786557, 0, 0, 786558, 0, 0, 786559, 0, 0, 786560, 4, 0, 786561, 7, 0, 786562, 4, 0, 786567, 4, 0, 786568, 7, 0, 786569, 4, 0, 786576, 0, 0, 786577, 0, 0, 786578, 0, 0, 786579, 0, 0, 786580, 0, 0, 786586, 4, 0, 786587, 0, 0, 786588, 0, 0, 786589, 0, 0, 786590, 4, 0, 786591, 7, 0, 786595, 0, 0, 786596, 0, 0, 786597, 0, 0, 786598, 0, 0, 786602, 7, 0, 786603, 4, 0, 786614, 0, 0, 786615, 0, 0, 786619, 8, 0, 786620, 10, 0, 917496, 4, 0, 917497, 7, 0, 917498, 4, 0, 917499, 7, 0, 917500, 4, 0, 917501, 7, 0, 917502, 4, 0, 917503, 7, 0, 851968, 4, 0, 851969, 7, 0, 851970, 4, 0, 851971, 7, 0, 851972, 4, 0, 851973, 7, 0, 851974, 4, 0, 851975, 7, 0, 851976, 4, 0, 851977, 7, 0, 851978, 4, 0, 851982, 10, 0, 851983, 7, 0, 851984, 4, 0, 851985, 7, 0, 851986, 4, 0, 851987, 7, 0, 851988, 4, 0, 851989, 7, 0, 851990, 4, 0, 851991, 7, 0, 851992, 4, 0, 851993, 7, 0, 851994, 4, 0, 851995, 7, 0, 851996, 4, 0, 852006, 10, 0, 852007, 7, 0, 852008, 4, 0, 852009, 7, 0, 852010, 4, 0, 852011, 7, 0, 852012, 4, 0, 852013, 7, 0, 852014, 4, 0, 852015, 7, 0, 852016, 4, 0, 852017, 7, 0, 852018, 4, 0, 852019, 7, 0, 852020, 4, 0, 852021, 8, 0, 852035, 10, 0, 852036, 4, 0, 852037, 7, 0, 852038, 4, 0, 852039, 7, 0, 852040, 4, 0, 852041, 7, 0, 852042, 4, 0, 852043, 7, 0, 852044, 4, 0, 852045, 7, 0, 852050, 4, 0, 852051, 7, 0, 852052, 4, 0, 852053, 7, 0, 852054, 4, 0, 852055, 7, 0, 852056, 4, 0, 852073, 7, 0, 852074, 4, 0, 852075, 7, 0, 852076, 4, 0, 852077, 7, 0, 852078, 3, 0, 852090, 10, 0, 852091, 7, 0, 852092, 4, 0, 852093, 7, 0, 852094, 4, 0, 852095, 7, 0, 852096, 4, 0, 852097, 7, 0, 852098, 3, 0, 852103, 12, 0, 852104, 4, 0, 852105, 7, 0, 852112, 10, 0, 852113, 7, 0, 852114, 4, 0, 852115, 7, 0, 852116, 4, 0, 852122, 4, 0, 852123, 7, 0, 852124, 4, 0, 852125, 7, 0, 852126, 4, 0, 852127, 7, 0, 852131, 7, 0, 852132, 4, 0, 852133, 7, 0, 852134, 4, 0, 852138, 10, 0, 852139, 7, 0, 852150, 7, 0, 852151, 4, 0, 917686, 10, 0, 917687, 8, 0 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( -19, 3 )
collision_mask = 62

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( 231, -117 )
current = true

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 3 )]
autoplay = true

[node name="Coins" type="Node2D" parent="."]

[node name="Coin1" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 364, 59 )
collision_layer = 8

[node name="Coin2" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 3947, -8 )
collision_layer = 8

[node name="Coin3" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 1422, 60 )

[node name="Coin4" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 3272, -4 )

[node name="Coin5" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 991, -145 )

[node name="Coin6" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 2030, -9 )

[node name="Coin7" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 2770, -103 )

[node name="Coin8" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 3473, -259 )

[node name="Coin9" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 4502, 59 )

[node name="Coin10" parent="Coins" instance=ExtResource( 5 )]
position = Vector2( 5238, -123 )

[node name="Fall_End" type="Area2D" parent="."]
position = Vector2( 2453, 79 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fall_End"]
position = Vector2( 1697.5, 79 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Win_End" type="Area2D" parent="."]
position = Vector2( 6619, -318 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Win_End"]
position = Vector2( 277, -23 )
scale = Vector2( 0.183673, 0.183673 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Win_End"]
position = Vector2( 277, -24 )
shape = SubResource( 2 )

[node name="Enemies" type="Node" parent="."]

[node name="crab" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 610, 0 )

[node name="crab2" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 3830, -17 )

[node name="crab3" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 2158, -14 )

[node name="crab4" parent="Enemies" instance=ExtResource( 7 )]
position = Vector2( 4798, -4 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="Panel" type="Panel" parent="HUD"]
margin_left = 28.0
margin_top = 14.0
margin_right = 221.0
margin_bottom = 67.0
custom_styles/panel = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="HUD"]
margin_left = 28.0
margin_top = 16.0
margin_right = 73.0
margin_bottom = 71.0
texture = ExtResource( 8 )
expand = true

[node name="x hud" type="Label" parent="HUD"]
margin_left = 73.0
margin_top = 29.0
margin_right = 86.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.964706, 0.0901961, 0.294118, 1 )
custom_fonts/font = SubResource( 4 )
text = "x"

[node name="Coins" type="Label" parent="HUD"]
margin_left = 96.0
margin_top = 28.0
margin_right = 122.0
margin_bottom = 53.0
custom_colors/font_color = Color( 0.944336, 0.892476, 0.0627098, 1 )
custom_fonts/font = SubResource( 5 )
text = "##"

[node name="Heart_Full" type="TextureRect" parent="HUD"]
margin_left = 136.0
margin_top = 31.0
margin_right = 295.0
margin_bottom = 76.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 2

[node name="Heart_Empty" type="TextureRect" parent="HUD"]
margin_left = 136.0
margin_top = 31.0
margin_right = 295.0
margin_bottom = 76.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 2

[node name="Flags" type="Node2D" parent="."]

[node name="Checkpoint1" parent="Flags" instance=ExtResource( 13 )]
position = Vector2( 3188, -172 )

[node name="Skeleton" parent="." instance=ExtResource( 15 )]
position = Vector2( 6585, -281 )
__meta__ = {
"_edit_group_": true
}

[connection signal="body_entered" from="Coins/Coin1" to="KinematicBody2D" method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin1" to="Coins/Coin1" method="_on_Coin_body_entered"]
[connection signal="coin_collected" from="Coins/Coin1" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Coins/Coin2" to="KinematicBody2D" method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin2" to="Coins/Coin2" method="_on_Coin_body_entered"]
[connection signal="coin_collected" from="Coins/Coin2" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Coins/Coin3" to="KinematicBody2D" method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin3" to="Coins/Coin3" method="_on_Coin_body_entered"]
[connection signal="coin_collected" from="Coins/Coin3" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Coins/Coin4" to="KinematicBody2D" method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin4" to="Coins/Coin4" method="_on_Coin_body_entered"]
[connection signal="coin_collected" from="Coins/Coin4" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Coins/Coin5" to="KinematicBody2D" method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin5" to="Coins/Coin5" method="_on_Coin_body_entered"]
[connection signal="coin_collected" from="Coins/Coin5" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Coins/Coin6" to="KinematicBody2D" method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin6" to="Coins/Coin6" method="_on_Coin_body_entered"]
[connection signal="coin_collected" from="Coins/Coin6" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Coins/Coin7" to="KinematicBody2D" method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin7" to="Coins/Coin7" method="_on_Coin_body_entered"]
[connection signal="coin_collected" from="Coins/Coin7" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Coins/Coin8" to="KinematicBody2D" method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin8" to="Coins/Coin8" method="_on_Coin_body_entered"]
[connection signal="coin_collected" from="Coins/Coin8" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Coins/Coin9" to="KinematicBody2D" method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin9" to="Coins/Coin9" method="_on_Coin_body_entered"]
[connection signal="coin_collected" from="Coins/Coin9" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Coins/Coin10" to="KinematicBody2D" method="_on_Coin_body_entered"]
[connection signal="body_entered" from="Coins/Coin10" to="Coins/Coin10" method="_on_Coin_body_entered"]
[connection signal="coin_collected" from="Coins/Coin10" to="HUD" method="_on_coin_collected"]
[connection signal="body_entered" from="Fall_End" to="KinematicBody2D" method="_on_Fall_End_body_entered"]
[connection signal="body_entered" from="Win_End" to="KinematicBody2D" method="_on_Win_End_body_entered"]
[connection signal="area_entered" from="Flags/Checkpoint1" to="KinematicBody2D" method="_on_Checkpoint1_area_entered"]
